--- a/src/components/landing-page/boxer/boxer.scss
+++ b/src/components/landing-page/boxer/boxer.scss
@@ -23,3 +23,33 @@
   height: 100%;
   object-fit: cover;
 }
+
+@media (max-width: 995px) {
+  .boxer-container {
+    flex-direction: column-reverse;
+    min-height: auto;
+  }
+
+  .text-side {
+    padding: 9% 5%;
+    text-align: center;
+  }
+
+  .image-side {
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .image-side img {
+    position: relative;
+    top: auto;
+    right: auto;
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .image-side {
+    display: none;
+  }
+}
