--- a/src/components/landing-page/footbalMan/footbalMan.scss
+++ b/src/components/landing-page/footbalMan/footbalMan.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 60px 110px 60px 110px;
-  max-height: 800px;
+  // max-height: 800px;
   color: #1B1B1B;
 
   .text-side-right-football {
@@ -30,10 +30,50 @@
     padding-right: 20px;
     
     img {
-      min-width: 250px;
+      min-width: 300px;
       max-width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  .image-side-left {
+    text-align: center; /* Center the image */
+  }
+
+  .image-side-left img {
+    display: inline-block; /* Ensure the image is displayed as a block */
+    margin: 0 auto; /* Center the image horizontally */
+    padding: 0;
+    min-width: 250px !important;
+  }
+}
+@media (max-width: 500px) {
+  .footbal-container {
+    padding: 30px 80px 60px 80px;
+  }
+
+  .text-side-right-football {
+    max-width: 100% !important;
+    h1 {
+      font-size: 40px !important;
+    }
+    p {
+      font-size: 15px !important;
+    }
+}
+}
+@media (max-width: 430px) {
+  .footbal-container {
+    padding: 30px 30px 50px 30px;
+  }
+}
+@media (max-width: 360px) {
+  .text-side-right-football {
+    h1 {
+      font-size: 35px !important;
     }
   }
 }
