--- a/src/components/landing-page/tennisWoman/tennisWoman.scss
+++ b/src/components/landing-page/tennisWoman/tennisWoman.scss
@@ -26,8 +26,17 @@
   }
   
   .image-side-right img {
-    max-width: 95%;
+    max-width: 100%;
     height: 100%;
-    object-fit: cover;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 850px) {
+  .tennis-container {
+    padding: 20px 0 20px 0;
+  }
+  .text-side-left {
+    padding: 0px 40px 0px 40px !important;
   }
 }
