--- a/src/components/landing-page/joinTeam/joinTeam.scss
+++ b/src/components/landing-page/joinTeam/joinTeam.scss
@@ -2,15 +2,17 @@
     background: linear-gradient(to bottom, rgba(128, 0, 32, 0.5), rgba(26, 0, 7, 0.5)),#000000;
     height: 750px;
     display: flex;
-    padding: 8%;
     justify-content: space-between;
     align-items: center;
     color: white;
     text-transform: capitalize;
   }
+
+  .team-wrapper {
+    width: 75% !important;
+  }
   
   .text-side-right {
-    flex: 1;
     font-size: 20px;
     text-align: center;
     font-weight: 700;
@@ -38,15 +40,23 @@
       color: #F49D60;
     }
   }
-
-
-  .image-side-left {
-    flex: 1;
-    padding-right: 20px;
-  }
-  
   .image-side-left img {
     max-width: 100%;
     height: 100%;
-    object-fit: cover; 
   }
+
+@media (max-width: 1440px) {
+  .team-wrapper {
+    width: 85% !important;
+  }
+}
+@media (max-width: 975px) {
+  .team-wrapper {
+    width: 100% !important;
+  }
+}
+@media (max-width: 767px) {
+  .text-side-right {
+    padding-top: 30px;
+  }
+}
