--- a/src/components/landing-page/requestDetails/requestDetails.scss
+++ b/src/components/landing-page/requestDetails/requestDetails.scss
@@ -28,22 +28,12 @@
         font-size: 25px;
         padding-bottom: 30px;
     }
+  }
 
-    .custom-btn {
-        width: 200px;
-        height: 50px;
-        background: linear-gradient(to right, #DD6080, #F49D60);
-        border-radius: 7px;
-        font-size: 16px;
-        font-weight: 600;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        color: #FFFFFF;
-        border: 1px solid black;
-
-        &:hover {
-          background: linear-gradient(to right, #F49D60, #DD6080);
-        }
-      }
+  @media (max-width: 700px) {
+    .details-container {
+        h1 { font-size: 40px; }
+        p { font-size: 20px; }
+    }
   }
   
