--- a/src/components/contact-form/beforeStart/beforeStart.scss
+++ b/src/components/contact-form/beforeStart/beforeStart.scss
@@ -1,8 +1,8 @@
 .before-start-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    // justify-content: space-around;
 
     .before-start-wrapper {
         color: white;
@@ -18,7 +18,7 @@
             font-size: 22px;
         }
     }
-    .gradient-text {
+    .gradient-text-contact {
         font-size: 40px;
         font-weight: 700;
         font-style: normal;
@@ -31,12 +31,19 @@
 }
 
 @media (max-width: 992px) {
-    img {
-      width: 80%;
-    }
+  img {
+    width: 80%;
   }
-  @media (max-width: 768px) {
-    img {
-      width: 50%;
-    }
+}
+@media (max-width: 768px) {
+  img {
+    margin-top: 20px;
+    width: 70%;
   }
+}
+@media (max-width: 500px) {
+  .before-start-wrapper ul {margin: -12px 0px 37px 0px !important;}
+}
+@media (max-width: 400px) {
+  .gradient-text-contact { font-size: 30px !important;}
+}
