--- a/src/components/contact-form/questionnaire/questionnaire.scss
+++ b/src/components/contact-form/questionnaire/questionnaire.scss
@@ -17,9 +17,7 @@
         border: 4px solid #000000;
     }
 
-    p {
-        font-size: 20px;
-    }
+    p { font-size: 20px; }
     a {
         color: white;
         p {
@@ -28,4 +26,14 @@
             font-weight: bold;
         }
     }
+}
+
+@media (max-width: 767px) {
+    .custom-scrollbar { overflow-y: hidden; }
+}
+@media (max-width: 500px) {
+    p { font-size: 15px !important; }
+    a p{ font-size: 12px !important;}
+    ul { font-size: 10px !important; }
+    .flex-wrap-sm { flex-wrap: wrap; }
 }
