--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,7 @@ textarea {
 }
 .form-control-custom {
   height:48px;
-  font-size: 16px;
+  font-size: 16px !important;
   font-weight: 400;
   line-height: 22.5px;
   background-color: #FFF;
@@ -128,4 +128,11 @@ textarea {
   &:hover {
     background: linear-gradient(to right, #F49D60, #DD6080);
   }
+}
+
+@media (max-width: 500px) {
+  .text-14 { font-size: 10px !important; }
+  .text-20 { font-size: 16px !important; }
+  .control-label-white { font-size: 11px; }
+  .form-control-custom { font-size: 13px !important; }
 }
