--- a/src/components/landing-page/footer/footer.scss
+++ b/src/components/landing-page/footer/footer.scss
@@ -14,6 +14,7 @@
         padding: 100px;
         display: flex;
         justify-content: flex-end;
+        align-items: center;
     }
     .footer-botom {
         min-height: 50px;
