--- a/src/components/landing-page/tennisWoman/tennisWoman.scss
+++ b/src/components/landing-page/tennisWoman/tennisWoman.scss
@@ -40,3 +40,8 @@
     padding: 0px 40px 0px 40px !important;
   }
 }
+@media (max-width: 767px) {
+  .image-side-right img {
+    width: 75%;
+  }
+}
