add contact us page with the form

--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,7 @@ textarea {
 .text-14 {font-size: 14px;}
 .text-15 {font-size: 15px;}
 .text-16 {font-size: 16px;}
+.text-18 {font-size: 18px;}
 .text-20 {font-size: 20px; font-weight: bold;}
 
 .control-label {
